tests/chapter_17/invalid_types/incomplete_types/void_array_pointer_in_declaration.c
void *malloc(unsigned long size);

int main(void) {
    void (*ptr)[3] = malloc(3); // array of void is illegal
    return ptr == 0;
}